<resources xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="CommentRequired">
    <string name="app_name" translatable="false">WiSL Vault</string>
    <string name="action_settings">Settings</string>
    <string name="app_subtitle">Local file storage</string>

    <string name="server_address_label">Server address</string>
    <string name="server_url_hint" translatable="false">http://192.168.x.x/api</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_delete">Delete</string>

    <string name="transfer_bytes_progress">%1$s of %2$s</string>
    <string name="notif_transfer_foreground">Transferring %d file(s)…</string>
    <string name="connecting_auto">Connecting to wislvault.local…</string>
    <string name="error_wislvault_unavailable">Could not connect to wislvault.local</string>
    <string name="error_connect">Could not connect: <xliff:g id="error_message" example="Connection refused">%s</xliff:g></string>
    <string name="no_files">No files on the server.</string>
    <string name="error_list_files">Error listing files: <xliff:g id="error_message" example="Connection refused">%s</xliff:g></string>
    <string name="error_upload">Upload error: <xliff:g id="error_message" example="Connection refused">%s</xliff:g></string>
    <string name="error_delete">Delete error: <xliff:g id="error_message" example="Connection refused">%s</xliff:g></string>

    <string name="downloading">Downloading…</string>
    <string name="download_started">Download started</string>
    <string name="downloads_started"><xliff:g id="count" example="3">%d</xliff:g> download(s) started</string>

    <string name="option_download">Download</string>
    <string name="option_info">View Info</string>
    <string name="option_delete">Delete</string>

    <string name="dialog_info_title">Information</string>
    <string name="info_name">Name</string>
    <string name="info_type">Type</string>
    <string name="info_size">Size</string>
    <string name="info_date">Upload date</string>

    <string name="dialog_delete_title">Delete file</string>
    <string name="dialog_delete_confirm">Are you sure you want to delete \"<xliff:g id="file_name" example="photo.jpg">%s</xliff:g>\"?</string>
    <string name="dialog_delete_selected_title">Delete files</string>
    <string name="dialog_delete_selected_confirm">Delete <xliff:g id="count" example="3">%d</xliff:g> selected file(s)?</string>

    <string name="notif_channel_name">Downloads</string>
    <string name="download_initiated">Download started. See details in the notification.</string>
    <string name="download_complete">Download complete</string>
    <string name="upload_complete">Upload complete</string>
    <string name="error_download">Download error: <xliff:g id="error_message" example="Connection refused">%s</xliff:g></string>
    <string name="time_remaining">remaining</string>

    <string name="cd_cancel_selection">Cancel selection</string>
    <string name="cd_delete_selected">Delete selected</string>
    <string name="cd_download_selected">Download selected</string>
    <string name="cd_select_all">Select all</string>
    <string name="cd_send_file">Send file</string>
    <string name="cd_options">Options</string>

    <string name="transfers_title">Transfers</string>
    <string name="tab_active">Active</string>
    <string name="tab_completed">Completed</string>
    <string name="tab_failed">Failed</string>
    <string name="cd_transfers_button">View transfers</string>
    <string name="transfer_status_cancelled">Cancelled</string>
    <string name="transfer_status_failed">Failed</string>
    <string name="action_select">Select</string>
    <string name="action_cancel_all">Cancel all transfers</string>
    <string name="action_clear_all">Clear all transfers</string>
    <string name="action_delete_selected">Delete selected</string>
    <string name="no_transfers_active">No active transfers.</string>
    <string name="no_transfers_completed">No completed transfers.</string>
    <string name="no_transfers_failed">No failed transfers.</string>
</resources>
